# simple-rust-backup

./: .gitignore  Cargo.toml  README.md
src/: main.rs
