[package]
name = "simple-rust-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3.2"
indicatif = "0.17.8"
clap = { version = "4.1.14", features = ["derive"] }

# Define the binaries sharing the same path
[[bin]]
name = "simple-rust-backup"
path = "src/main.rs"

[[bin]]
name = "srb"
path = "src/main.rs"
